--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,324 @@
 * {
     box-sizing: border-box;
 }
+
+:root {
+    --primary-color: #FF5B2E;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-size  : 1.6rem;
+    font-family: "Poppins", serif;
+    background : #FFFAF5;
+}
+
+/* Common */
+a {
+    text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Sora", serif;
+}
+
+input,
+textarea,
+select,
+button {
+    font-size  : inherit;
+    font-family: inherit;
+}
+
+.container {
+    width    : 1170px;
+    max-width: calc(100% - 48px);
+    margin   : 0 auto;
+}
+
+.btn {
+    --height       : 56px;
+    display        : inline-flex;
+    align-items    : center;
+    justify-content: center;
+    min-width      : 246px;
+    height         : var(--height);
+    line-height    : var(--height);
+    border-radius  : 999px;
+    border         : 1px solid rgba(0, 9, 88, 0.7);
+    color          : #000958;
+    text-align     : center;
+    font-size      : 1.4rem;
+    font-weight    : 600;
+}
+
+.btn:hover {
+    background  : #000958;
+    border-color: #000958;
+    color       : #FFFAF5;
+}
+
+.btn--primary {
+    color       : #fff;
+    background  : var(--primary-color);
+    border-color: var(--primary-color);
+}
+
+.btn--primary:hover {
+    background  : #FFF6ED;
+    border-color: var(--primary-color);
+    color       : var(--primary-color);
+}
+
+.btn__icon {
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
+    color          : var(--primary-color);
+    width          : 20px;
+    height         : 20px;
+    border-radius  : 50%;
+    background     : #fff;
+    margin-left    : 10px;
+}
+
+.btn--primary:hover .btn__icon {
+    color     : #fff;
+    background: var(--primary-color);
+}
+
+/* Header */
+.header {
+    background: #FFFAF5;
+    padding   : 18px 0 10px;
+}
+
+.header.fixed {
+    position: sticky;
+    top     : -8px;
+    z-index : 1;
+}
+
+.header__inner {
+    display        : flex;
+    align-items    : center;
+    justify-content: space-between;
+}
+
+.navbar__list {
+    display: flex;
+}
+
+.navbar__link {
+    color      : #5E6085;
+    font-size  : 1.4rem;
+    font-weight: 500;
+    line-height: 1;
+    padding    : 8px 18px;
+}
+
+.navbar__link:hover {
+    color      : #000958;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.header-action__link {
+    color       : #5E6085;
+    font-size   : 1.4rem;
+    font-weight : 500;
+    line-height : 1;
+    margin-right: 28px;
+}
+
+.header-action__link:hover {
+    color      : #000958;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.header-action__btn {
+    --height : 50px;
+    min-width: 117px;
+
+}
+
+/* Hero */
+.hero {
+    margin-top: 90px;
+}
+
+.hero__inner {
+    display        : flex;
+    align-items    : center;
+    justify-content: space-between;
+    column-gap     : 121px;
+}
+
+.hero__media {
+    position      : relative;
+    display       : flex;
+    padding-bottom: 94px;
+}
+
+.hero__img-wrap {
+    position       : relative;
+    display        : flex;
+    align-items    : flex-end;
+    justify-content: center;
+    width          : 388px;
+    height         : 488px;
+    border-radius  : 16px;
+    background     : #FE997B;
+    border         : 3px solid #fff;
+}
+
+.hero__img {
+    max-width    : 100%;
+    max-height   : 100%;
+    border-radius: inherit;
+}
+
+.hero__decor {
+    position: absolute;
+    z-index : -1;
+}
+
+.hero__decor-left {
+    left  : -58px;
+    bottom: 10px;
+}
+
+.hero__decor-right {
+    right: -42px;
+    top  : 16px;
+}
+
+/* Image Small */
+.hero__img-wrap-small {
+    align-self: flex-end;
+    margin    : 0 0 -58px -24px;
+    width     : 186px;
+    height    : 244px;
+    border    : 2px solid #fddfe1;
+    background: #FAA7AD;
+}
+
+.hero__img-small {
+    max-width : 100%;
+    max-height: 100%;
+}
+
+/* Hero list */
+.hero__list {
+    position     : absolute;
+    left         : 129px;
+    bottom       : 0;
+    width        : 250px;
+    height       : 156px;
+    border-radius: 10px;
+    background   : #FFF;
+    padding      : 18px 14px;
+    box-shadow   : -17px 14px 68px -4px rgba(207, 174, 132, 0.25);
+}
+
+.hero-list-item {
+    display: flex;
+}
+
+.hero-list-item__thumb {
+    width        : 40px;
+    height       : 40px;
+    border-radius: 10px;
+    background   : #FEC23F;
+    object-fit   : cover;
+}
+
+.hero-list-item__thumb--bg {
+    background: #C6E2FA;
+}
+
+
+.hero-list-item__info {
+    margin-left: 10px;
+}
+
+.hero-list-item__title {
+    color      : #181E52;
+    font-size  : 1.4rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.hero-list-item__skeleton+.hero-list-item__skeleton {
+    margin-top: 6px;
+    width     : 39px;
+}
+
+.hero-list-item__skeleton {
+    width        : 118px;
+    height       : 4px;
+    border-radius: 999px;
+    opacity      : 0.08;
+    background   : #000958;
+    margin-top   : 7px;
+}
+
+/* Separate */
+.hero-list-item__separate {
+    width        : 100%;
+    height       : 2px;
+    background   : #F2F2F2;
+    border-radius: 999px;
+    margin       : 20px 0;
+}
+
+/* Hero Content */
+.hero__heading {
+    color      : #000958;
+    font-size  : 6.6rem;
+    font-weight: 800;
+    line-height: 1.15;
+}
+
+.hero__desc {
+    width      : 391px;
+    color      : #656689;
+    font-size  : 1.6rem;
+    font-weight: 400;
+    line-height: 1.87;
+    margin     : 24px 0 38px;
+}
+
+.hero__row {
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
+}
+
+.hero__cta-btn {
+    --height    : 60px;
+    min-width   : 189px;
+    margin-right: 24px;
+    font-size   : 1.6rem;
+    box-shadow  : 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+}
+
+.hero__cta-link {
+    color          : #000958;
+    font-size      : 1.6rem;
+    font-weight    : 500;
+    line-height    : 1;
+    text-decoration: underline;
+
+}
+
+
+/* Main */
+.main {}
